# sideproj-myengine-opengl

./: .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Application.cpp  Application.h  Engine.h  Event.h  KeyCodes.h  coreh.h  main.cpp  window.h
src/platform/macos/: WindowGLFW_GL.cpp  WindowGLFW_GL.h
